--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,15 +4,8 @@
 
 	<meta charset="utf-8">
 	<title>Drawkemon</title>
-    <script>
-        ((window.gitter = {}).chat = {}).options = {
-            room: 'MakeItHappen_/Lobby'
-        };
-    </script>
-    <script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
 
-
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
 	<meta name="description" content="">
@@ -49,8 +42,8 @@
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav navbar-right main-navigation">
 				<li><a href="#about" class="smoothScroll">ABOUT</a></li>
-				<li><a href="#blog" class="smoothScroll">DEMO</a></li>
-				<li><a href="#testimonial" class="smoothScroll">TESTIMONIALS</a></li>
+				<li><a href="#blog" class="smoothScroll">Draw</a></li>
+				<li><a href="#testimonial" class="smoothScroll">Gallery</a></li>
 			</ul>
 		</div>
 
@@ -83,11 +76,11 @@
 
 <!-- blog section
 ================================================== -->
-<section id="blog" class="paralla-section" >
+<section id="blog" class="paralla-section" style="background: url(./images/pokemon_back.png)">
 
 <center>
-<div class = "div3" style="color: #FFFFFF">Draw your own pokemon!!!!</div>
-<div id="edges2cats" style="opacity: 0.8"></div>
+<div class = "div3" style="color: #000000; background-color:#FFFFFF;">Draw your own pokemon!!!!</div>
+<div id="drawkemon"></div>
 </center>
 <script src="deeplearn-0.3.15.js"></script>
 <script>
@@ -110,8 +103,9 @@ function main() {
   }
 
   create_editor({
-    name: "edges2cats",
-    weights_url: "/models/pokemon_model_full_20.bin",
+    name: "drawkemon",
+    // weights_url: "/models/pokemon_model_full_20.bin",
+    weights_url: "/models/pokemon_model_0.bin",
     mode: "line",
     clear: "#FFFFFF",
     colors: {
@@ -430,7 +424,7 @@ Editor.prototype = {
               // eraser mode
               this.buffer.lineWidth = 15
             } else {
-              this.buffer.lineWidth = 5
+              this.buffer.lineWidth = 9
             }
             this.buffer.moveTo(last.x, last.y)
             this.buffer.lineTo(cur.x, cur.y)
@@ -592,10 +586,11 @@ Editor.prototype = {
    v.frame("submit_button", 580-32, 310, 64, 40, () => {
           if (do_button(v, "submit")) {
           // create a canvas to hold the part of the canvas that we wish to store
-          var x = 125 * SCALE
-          var y = 0
-          var width = 800 * SCALE - x
-          var height = 310 * SCALE - y
+          //530, 40, 256, 256
+          var x = 530
+          var y = 40
+          var width = 530 + 256
+          var height = 40 + 256
           var convert = createContext(width, height, 1)
           convert.drawImage(v.ctx.canvas, x, y, width, height, 0, 0, convert.canvas.width, convert.canvas.height)
           var data_b64 = convert.canvas.toDataURL("image/png").replace(/^data:image\/png;base64,/, "")
@@ -628,7 +623,7 @@ Editor.prototype = {
           // event.initEvent("click", true, true)
           // a.dispatchEvent(event)
           // safari doesn"t work at all
-          alert("Submitting")
+          alert("Submitted")
       }
   })
 
@@ -1092,53 +1087,51 @@ document.addEventListener("mouseup", function(e) {
       ================================================== -->
       <div id="owl-testimonial" class="owl-carousel">
 
-        <div class="item">
-          <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-              <img src="images/testimonial-img-1.jpg" class="img-responsive img-circle" alt="testimonial img">
-              <h2>LINDA - City Planner</h2>
-              <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-              <img src="images/testimonial-img-2.jpg" class="img-responsive img-circle" alt="testimonial img">
-              <h2>TANYA - Architect</h2>
-              <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-              <img src="images/testimonial-img-3.jpg" class="img-responsive img-circle" alt="testimonial img">
-              <h2>SANDAR - Developer</h2>
-              <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="item">
-          <div class="row">
-            <div class="col-md-offset-2 col-md-8">
-              <img src="images/testimonial-img-3.jpg" class="img-responsive img-circle" alt="testimonial img">
-              <h2>SANDAR - Developer</h2>
-              <p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-
+        <!--<div class="item">-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-offset-2 col-md-8">-->
+              <!--<img src="images/testimonial-img-1.jpg" class="img-responsive img-circle" alt="testimonial img">-->
+              <!--<h2>LINDA - City Planner</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="item">-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-offset-2 col-md-8">-->
+              <!--<img src="images/testimonial-img-2.jpg" class="img-responsive img-circle" alt="testimonial img">-->
+              <!--<h2>TANYA - Architect</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!--<div class="item">-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-offset-2 col-md-8">-->
+              <!--<img src="images/testimonial-img-3.jpg" class="img-responsive img-circle" alt="testimonial img">-->
+              <!--<h2>SANDAR - Developer</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+        <!---->
+        <!--<div class="item">-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-offset-2 col-md-8">-->
+              <!--<img src="images/testimonial-img-3.jpg" class="img-responsive img-circle" alt="testimonial img">-->
+              <!--<h2>SANDAR - Developer</h2>-->
+              <!--<p>Lorem ipsum dolor sit amet, maecenas eget vestibulum justo imperdiet, wisi risus purus augue vulputate voluptate neque, curabitur dolor libero sodales vitae elit massa.</p>-->
+            <!--</div>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</div>-->
     </div>
   </div>
 </section>
 
 
 
-<!-- Javascript
+<!-- Javascript 
 ================================================== -->
 <script src="js/jquery.js"></script>
 <script src="js/bootstrap.min.js"></script>
