--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -331,7 +331,12 @@ function Editor(config) {
   }
   this.sheet_index = 1
 }
-
+function blobToFile(theBlob, fileName){
+    //A Blob() is almost a File() - it's just missing the two properties below which we will add
+    theBlob.lastModifiedDate = new Date();
+    theBlob.name = fileName;
+    return theBlob;
+}
 Editor.prototype = {
   push_buffer: function() {
     this.buffers.push(this.buffer)
@@ -621,6 +626,7 @@ Editor.prototype = {
           var blob = new Blob([data], {type: "image/png"})
           var username = prompt("Please tell us your nick name:")
           var pokename = prompt("Please tell us your pokemon's name:")
+          var file = blobToFile(blob, "my-image.png");
           // alert(email)
           // alert(pokename)
           // alert(blob)
@@ -632,7 +638,7 @@ Editor.prototype = {
           var formData = new FormData();
           formData.append("nickname", username);
           formData.append("name", pokename);
-          formData.append("file", blob);
+          formData.append("file", file);
           var req = new XMLHttpRequest();
           req.open("POST", '/submit');
           req.send(formData);
@@ -1099,13 +1105,61 @@ document.addEventListener("mouseup", function(e) {
 
 </script>
 </section>
+<style>
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 180px;
+}
 
+div.gallery:hover {
+    border: 1px solid #777;
+}
+
+div.gallery img {
+    width: 100%;
+    height: auto;
+}
+
+div.desc {
+    padding: 15px;
+    text-align: center;
+}
+</style>
 <!-- Testimonial section
 ================================================== -->
 <section id="testimonial" class="parallax-section">
   <div class="container">
     <div class="row">
 
+      <div class="gallery">
+        <a target="_blank" href="img_5terre.jpg">
+          <img src="images\testing-1000-outputs.png" alt="5Terre" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img_forest.jpg">
+          <img src="images\testing-1000-outputs.png" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img_lights.jpg">
+          <img src="images\testing-1000-outputs.png" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="img_mountains.jpg">
+          <img src="images\testing-1000-outputs.png" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Add a description of the image here</div>
+      </div>
       <!-- Service Owl Carousel section
       ================================================== -->
       <div id="owl-testimonial" class="owl-carousel">
