--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -540,6 +540,7 @@ Editor.prototype = {
                 request_in_progress = false
                 update()
               })
+              
             })
           }, (e) => {
             this.last_failure = e
@@ -1131,35 +1132,79 @@ div.desc {
 ================================================== -->
 <section id="testimonial" class="parallax-section">
   <div class="container">
-    <div class="row">
+    <div class="center">
 
       <div class="gallery">
-        <a target="_blank" href="img_5terre.jpg">
+        <a target="_blank" href="images\testing-1000-outputs.png">
           <img src="images\testing-1000-outputs.png" alt="5Terre" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">114 likes</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="img_forest.jpg">
-          <img src="images\testing-1000-outputs.png" alt="Forest" width="600" height="400">
+        <a target="_blank" href="images\testing-1001-outputs.png">
+          <img src="images\testing-1001-outputs.png" alt="Forest" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">99 likes</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="img_lights.jpg">
-          <img src="images\testing-1000-outputs.png" alt="Northern Lights" width="600" height="400">
+        <a target="_blank" href="images\testing-1002-outputs.png">
+          <img src="images\testing-1002-outputs.png" alt="Northern Lights" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">68 likes</div>
       </div>
 
       <div class="gallery">
-        <a target="_blank" href="img_mountains.jpg">
-          <img src="images\testing-1000-outputs.png" alt="Mountains" width="600" height="400">
+        <a target="_blank" href="images\testing-1003-outputs.png">
+          <img src="images\testing-1003-outputs.png" alt="Mountains" width="600" height="400">
         </a>
-        <div class="desc">Add a description of the image here</div>
+        <div class="desc">60 likes</div>
       </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1004-outputs.png">
+          <img src="images\testing-1004-outputs.png" alt="5Terre" width="600" height="400">
+        </a>
+        <div class="desc">49 likes</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1005-outputs.png">
+          <img src="images\testing-1005-outputs.png" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">47 likes</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1006-outputs.png">
+          <img src="images\testing-1006-outputs.png" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">42 likes</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1007-outputs.png">
+          <img src="images\testing-1007-outputs.png" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">41 likes</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1008-outputs.png">
+          <img src="images\testing-1008-outputs.png" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">37 likes</div>
+      </div>
+
+      <div class="gallery">
+        <a target="_blank" href="images\testing-1009-outputs.png">
+          <img src="images\testing-1009-outputs.png" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">33 likes</div>
+      </div>
+
+    </div>
       <!-- Service Owl Carousel section
       ================================================== -->
       <div id="owl-testimonial" class="owl-carousel">
