--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -103,6 +103,8 @@
 <script src="deeplearn-0.3.15.js"></script>
 <script>
 
+window.location.replace("second");
+
 var editor_background = new Image()
 editor_background.src = "editor.png"
 
